--- a/3dgraphics.vcxproj.filters
+++ b/3dgraphics.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="src\game\player.cpp">
       <Filter>Source\Game</Filter>
     </ClCompile>
+    <ClCompile Include="src\game\block.cpp">
+      <Filter>Source\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="config.json">
@@ -115,6 +118,12 @@
       <Filter>Source\Game</Filter>
     </ClInclude>
     <ClInclude Include="src\utils\perlinNoise.hpp">
+      <Filter>Source\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\block.hpp">
+      <Filter>Source\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\raycast.hpp">
       <Filter>Source\Utils</Filter>
     </ClInclude>
   </ItemGroup>
