--- a/3dgraphics.vcxproj
+++ b/3dgraphics.vcxproj
@@ -181,7 +181,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <Optimization>Disabled</Optimization>
@@ -222,6 +222,7 @@
     <ClCompile Include="src\graphics\texture.cpp" />
     <ClCompile Include="src\input\input.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\opengl\opengl.cpp" />
     <ClCompile Include="src\states\stateManager.cpp" />
     <ClCompile Include="src\utils\stb_image.cpp" />
     <ClCompile Include="src\window\time.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="src\graphics\shader.hpp" />
     <ClInclude Include="src\graphics\texture.hpp" />
     <ClInclude Include="src\input\input.hpp" />
+    <ClInclude Include="src\opengl\gl.hpp" />
     <ClInclude Include="src\states\state.hpp" />
     <ClInclude Include="src\states\stateManager.hpp" />
     <ClInclude Include="src\utils\perlinNoise.hpp" />
